2007-07-12  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/spuelf.em (embedded_spu_file): Test for NULL path
	before calling base_name, not after.

2007-07-10  Alan Modra  <amodra@bigpond.net.au>

	* scripttempl/elf.sc (DISCARDED): Renamed from STACKNOTE.  Add
	.gnu.debuglink.
	* scripttempl/armbpabi.sc: Likewise.
	* scripttempl/elf32sh-symbian.sc: Likewise.
	* scripttempl/elfxtensa.sc: Likewise.
	* scripttempl/mep.sc: Likewise.

2007-07-09  Roland McGrath  <roland@redhat.com>

	* emultempl/elf32.em (gld${EMULATION_NAME}_add_option): Add --build-id.
	(gld${EMULATION_NAME}_handle_option): Handle --build-id.
	(gld${EMULATION_NAME}_list_options): List --build-id.
	(gld${EMULATION_NAME}_after_open): If --build-id was given,
	synthesize a ".note.gnu.build-id" section and cache it in elf_tdata.
	* ld.texinfo (Options): Describe --build-id.
	* NEWS: Mention --build-id.

2007-07-06  Nick Clifton  <nickc@redhat.com>

	* deffile.h: Update copyright notice to refer to GPLv3.
	* deffilep.y, ldcref.c, ldctor.c, ldctor.h, ldemul.c, ldemul.h,
	ldexp.c, ldexp.h, ldfile.c, ldfile.h, ldgram.y, ld.h, ldlang.c,
	ldlang.h, ldlex.h, ldlex.l, ldmain.c, ldmain.h, ldmisc.c,
	ldmisc.h, ldver.c, ldver.h, ldwrite.c, ldwrite.h, lexsup.c, mri.c,
	mri.h, pe-dll.c, pe-dll.h, pep-dll.c, pep-dll.h, stamp-h.in,
	sysdep.h, emultempl/aix.em, emultempl/alphaelf.em,
	emultempl/armcoff.em, emultempl/armelf.em, emultempl/avrelf.em,
	emultempl/beos.em, emultempl/cr16elf.em, emultempl/crxelf.em,
	emultempl/elf32.em, emultempl/elf-generic.em, emultempl/genelf.em,
	emultempl/generic.em, emultempl/gld960c.em, emultempl/gld960.em,
	emultempl/hppaelf.em, emultempl/ia64elf.em, emultempl/irix.em,
	emultempl/linux.em, emultempl/lnk960.em, emultempl/m68hc1xelf.em,
	emultempl/m68kcoff.em, emultempl/m68kelf.em,
	emultempl/mipsecoff.em, emultempl/mipself.em,
	emultempl/mmixelf.em, emultempl/mmix-elfnmmo.em, emultempl/mmo.em,
	emultempl/needrelax.em, emultempl/pe.em, emultempl/pep.em,